# fiap-2mlet-datathon

./: .env  .gitignore  Makefile  README.md  docker-compose.yaml  requirements.txt
.github/workflows/: libraries_pipeline.yaml  model_pipeline.yaml
data_engineering/: columns.txt  data_export.ipynb  data_import_vectors.ipynb  llm_analysis.ipynb  preprocessing_data.ipynb  vectors_indexing.ipynb  vectors_tests.ipynb
data_transform_utilities/: pyproject.toml
data_transform_utilities/src/data_transform_utilities/: __init__.py  flatten.py  score.py  text_parsers.py
data_transform_utilities/tests/: test_flatten.py  test_score.py  test_text_parsers.py
data_transform_utilities/tests/resources/: index_type.json
decision-app/: .env  Dockerfile  app.js  package-lock.json  package.json
decision-app/api/: parameters.js
decision-app/routes/: applicants.js  index.js  vacancy.js
decision-app/services/: applicants.js  generic_db.js  similarity.js  vacancies.js
decision-app/views/: index.pug  layout.pug
grafana/dashboards/: app-dashboard.json
model/: evaluate_extraction.py  pyproject.toml  requirements.txt  vector_embedding_test.ipynb
model/extractor/: hf_llm.py
model/scripts/: model_train.ipynb  ndcg_evaluation.ipynb
model/src/: bert_test.py
mysql/: startup.sql
prometheus/: prometheus.yml
similarity_api/: Dockerfile  env.yaml  main.py  requirements.txt
similarity_api/api/: resources.py
similarity_api/configuration/: environment.py  logger.py
similarity_api/services/: model.py  vectordb.py
similarity_api/tests/: test_api.py
(+7 files in other folders)
