[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "applicant_vacancy_recommendation"
version = "0.0.1"
description = "Modelo BERT para recomendar candidatos para vagas de emprego utilizanfo distância de Conessenos"
authors = [
    { name = "Allan Baliberdin", email = "a.baliberdin@gmail.com" }
]
dependencies = [
    "numpy",
    "pandas"
]
requires-python = ">=3.8"
readme = "README.md"

[tool.setuptools]
packages = ["src"]  # Lista os pacotes a serem incluídos

#[project.optional-dependencies]
#dev = ["pytest"]  # Dependências opcionais para desenvolvimento
